--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -10,7 +10,7 @@
 
 \makeindex
 
-\title{The SAM Format Specification (v1.3-r625)}
+\title{The SAM Format Specification (v1.3-r644)}
 \author{The SAM Format Specification Working Group}
 \begin{document}
 
@@ -78,8 +78,8 @@ r001  83 ref 37 30 9M         =  7 -39 CAGCGCCAT         *
   using the 1-based coordinate system.
 \item[0-based coordinate system] A coordinate system where the first
   base of a sequence is zero. In this coordinate system, a region is
-  specified by a half-close-half-open interval. For example, the region
-  between the 3rd and the 7th bases inclusive is $[2,7)$. The BED,
+  specified by a half-closed-half-open interval. For example, the region
+  between the 3rd and the 7th bases inclusive is $[2,7)$. The BAM, BED,
   Wiggle and PSL formats are using the 0-based coordinate system.
 \item[Phred scale] Given a probability $0<p\le 1$, the phred scale of $p$
   equals $-10\log_{10}p$, rounded to the closest integer.
@@ -103,19 +103,25 @@ The following table give the defined record types and tags. Tags with
   \cline{1-3}
   \multicolumn{2}{|l}{\tt @HD} & The header line. The first line if present. \\\cline{2-3}
   & {\tt VN}* & Format version. \emph{Accepted format}: {\tt /\char94[0-9]+\char92.[0-9]+\$/}.\\\cline{2-3}
-  & {\tt SO} & Sorting order. \emph{Valid values}: {\tt unknown} (default), {\tt unsorted}, {\tt queryname} and {\tt coordinate}. \\\cline{1-3}
+  & {\tt SO} & Sorting order of alignments. \emph{Valid values}: {\tt unknown} (default), {\tt
+    unsorted}, {\tt queryname} and {\tt coordinate}. For coordinate sort, the major sort
+  key is the RNAME field, with order defined by the order of @SQ lines in the header.  The
+  minor sort key is the POS field.  For alignments with equal RNAME and POS, order is
+  arbitrary.  All alignments with * in RNAME field follow alignments with some other
+  value but otherwise are in arbitrary order.\\\cline{1-3}
   \multicolumn{2}{|l}{\tt @SQ} & Reference sequence dictionary. The order of {\tt @SQ} lines defines the alignment sorting order.\\\cline{2-3}
   & {\tt SN}* & Reference sequence name. Each {\tt @SQ} line must have a unique {\tt SN} tag. The value of this
   field is used in the
-  alignment records. \\\cline{2-3}
+  alignment records in RNAME and PNEXT fields. Regular expression: {\tt [!-)+-\char60\char62-\char126][!-\char126]*}\\\cline{2-3}
   & {\tt LN}* & Reference sequence length. \emph{Range}: {\tt [1,2$^{29}$-1]}\\\cline{2-3}
   & {\tt AS} & Genome assembly identifier. \\\cline{2-3}
   & {\tt M5} & MD5 checksum of the sequence in the uppercase, with gaps and spaces removed.\\\cline{2-3}
   & {\tt SP} & Species.\\\cline{2-3}
-  & {\tt UR} & URI of the sequence.\\\cline{1-3}
+  & {\tt UR} & URI of the sequence.  This value may start with one of the standard
+  protocols, e.g http: or ftp:.  If it does not start with one of these protocols, it is assumed to be a file-system path.\\\cline{1-3}\pagebreak\cline{1-3}
   \multicolumn{2}{|l}{\tt @RG} & Read group. Unordered multiple lines are allowed.\\\cline{2-3}
   & {\tt ID}* & Read group identifier. Each {\tt @RG} line must have a unique {\tt ID}. The value of {\tt ID}
-  is used in the RG tags of alignment records. \\\cline{2-3}
+  is used in the RG tags of alignment records. Must be unique among all read groups in header section.  Read group IDs may be modified when merging SAM files in order to handle collisions.\\\cline{2-3}
   & {\tt CN} & Name of sequencing center producing the read.\\\cline{2-3}
   & {\tt DS} & Description.\\\cline{2-3}
   & {\tt DT} & Date the run was produced (ISO8601 date or date/time).\\\cline{2-3}
@@ -123,12 +129,13 @@ The following table give the defined record types and tags. Tags with
   & {\tt PI} & Predicted median insert size.\\\cline{2-3}
   & {\tt PL} & Platform/technology used to produce the read. \emph{Valid values}:
   {\tt ILLUMINA}, {\tt SOLID}, {\tt LS454}, {\tt HELICOS} and {\tt PACBIO}.\\\cline{2-3}
-  & {\tt PU} & Platform unit (e.g. lane for Illumina or slide for SOLiD). Unique identifier.\\\cline{2-3}
-  & {\tt SM} & Sample. Use pool name where a pool is being sequenced.\\\cline{1-3}\pagebreak\hline
+  & {\tt PU} & Platform unit (e.g. flowcell-barcode.lane for Illumina or slide for SOLiD). Unique identifier.\\\cline{2-3}
+  & {\tt SM} & Sample. Use pool name where a pool is being sequenced.\\\cline{1-3}
   \multicolumn{2}{|l}{\tt @PG} & Program. \\\cline{2-3}
-  & {\tt ID}* & Program name. Each {\tt @PG} line must have a unique {\tt ID}. The value of {\tt ID} is used in the alignment {\tt PG} tag and {\tt PP} tags of other {\tt @PG} lines.\\\cline{2-3}
+  & {\tt ID}* & Program record identifier. Each {\tt @PG} line must have a unique {\tt ID}. The value of {\tt ID} is used in the alignment {\tt PG} tag and {\tt PP} tags of other {\tt @PG} lines.  PG IDs may be modified when merging SAM files in order to handle collisions.\\\cline{2-3}
+  & {\tt PN} & Program name \\\cline{2-3}
   & {\tt CL} & Command line \\\cline{2-3}
-  & {\tt PP} & Previous {\tt @PG-ID}. Must match another {\tt @PG} header's {\tt ID} tag. {\tt @PG} records may be chained using {\tt PP} tag, with the first record in the chain having no {\tt PP} tag. This chain defines the order of programs that have been applied to the alignment. \\\cline{2-3}
+  & {\tt PP} & Previous {\tt @PG-ID}. Must match another {\tt @PG} header's {\tt ID} tag. {\tt @PG} records may be chained using {\tt PP} tag, with the last record in the chain having no {\tt PP} tag. This chain defines the order of programs that have been applied to the alignment.  PP values may be modified when merging SAM files in order to handle collisions of PG IDs.  The first PG record in a chain (i.e. the one referred to by the PG tag in a SAM record) describes the most recent program that operated on the SAM record.  The next PG record in the chain describes the next most recent program that operated on the SAM record. \\\cline{2-3}
   & {\tt VN} & Program version \\\cline{1-3}
   \multicolumn{2}{|l}{\tt @CO} & One-line text comment. Unordered multiple lines are allowed.\\
   \cline{1-3}
@@ -157,7 +164,7 @@ fields in the SAM format:
   8 & {\sf PNEXT} & Int & {\tt [0,2$^{29}$-1]} & Position of the mate/next fragment \\
   9 & {\sf TLEN} & Int & {\tt [-2$^{29}$+1,2$^{29}$-1]} & observed Template LENgth \\
   10 & {\sf SEQ} & String & {\tt \char92*|[A-Za-z=.]+} & fragment SEQuence\\
-  11 & {\sf QUAL} & String & {\tt [!-\char126]+} & ASCII of base QUALity+33 \\
+  11 & {\sf QUAL} & String & {\tt [!-\char126]+} & ASCII of Phred-scaled base QUALity+33 \\
   \hline
 \end{tabular}
 \end{center}
@@ -267,10 +274,12 @@ fields in the SAM format:
   An `=' denotes the base is identical to the reference base. No
   assumptions can be made on the letter cases. Anything other than {\tt
     A/C/G/T/=} is regarded as ambiguous base {\tt N}.
-\item {\sf QUAL}: ASCII of base QUALity plus 33. A base quality equals
-  $-10\log_{10}\Pr\{\mbox{base is wrong}\}$. This field can be a `*'
-  when quality is not stored. If not a `*', {\sf SEQ} is not a `*' and
-  the length of the quality string must equal the length of {\sf SEQ}.
+\item {\sf QUAL}: ASCII of base QUALity plus 33 (same as the quality
+  string in the Sanger FASTQ format). A base quality is the phred-scaled
+  base error probability which equals $-10\log_{10}\Pr\{\mbox{base is
+    wrong}\}$. This field can be a `*' when quality is not stored. If
+  not a `*', {\sf SEQ} is not a `*' and the length of the quality string
+  must equal the length of {\sf SEQ}.
 \end{enumerate}
 
 \subsection{The alignment section: optional fields}
